--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "node" : ">= 0.6.0"
     },
     "peerDependencies" : {
-        "awssum" : ">= 1.2.0"
+        "awssum" : "~1"
     },
     "dependencies" : {
         "underscore" : "1.4.x",
