--- a/package.json
+++ b/package.json
@@ -1,47 +1,51 @@
 {
-    "name" : "awssum-amazon",
-    "description" : "NodeJS module to aid talking to Amazon Web Services. Requires awssum-amazon-* plugins.",
-    "version" : "1.3.0",
-
-    "main" : "awssum-amazon.js",
-    "engines" : {
-        "node" : ">= 0.6.0"
-    },
-    "peerDependencies" : {
-        "awssum" : "~1"
-    },
-    "dependencies" : {
-        "underscore" : "1.4.x",
-        "dateformat" : "1.0.4-1.2.3"
-    },
-    "devDependencies" : {
-        "tape" : "*"
-    },
-    "scripts" : {
-        "test" : "set -e; find test/ -name '*.js' -exec echo --- {} --- ';' -exec node {} ';'"
-    },
-
-    "homepage" : "https://awssum.io/",
-    "repository" : {
-        "type" : "git",
-        "url" : "git://github.com/awssum/awssum-amazon.git"
-    },
-    "bugs" : {
-        "url" : "http://github.com/awssum/awssum-amazon/issues",
-        "mail" : "andychilton@gmail.com"
-    },
-
-    "author" : {
-        "name" : "Andrew Chilton",
-        "email" : "andychilton@gmail.com",
-        "url" : "http://chilts.org/"
-    },
-    "contributors" : [],
-    "licenses" : [{
-        "type" : "MIT",
-        "url" : "http://github.com/awssum/awssum-amazon/raw/master/LICENSE"
-    }],
-    "keywords" : [
-        "awssum", "awssum-plugin", "amazon", "aws", "webapi", "api"
-    ]
+  "name": "awssum-amazon",
+  "description": "NodeJS module to aid talking to Amazon Web Services. Requires awssum-amazon-* plugins.",
+  "version": "1.4.0",
+  "main": "awssum-amazon.js",
+  "engines": {
+    "node": ">= 0.6.0"
+  },
+  "peerDependencies": {
+    "awssum": "~1"
+  },
+  "dependencies": {
+    "underscore": "1.4.x",
+    "dateformat": "1.0.4-1.2.3"
+  },
+  "devDependencies": {
+    "tape": "*"
+  },
+  "scripts": {
+    "test": "set -e; find test/ -name '*.js' -exec echo --- {} --- ';' -exec node {} ';'"
+  },
+  "homepage": "https://awssum.io/",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/awssum/awssum-amazon.git"
+  },
+  "bugs": {
+    "url": "http://github.com/awssum/awssum-amazon/issues",
+    "mail": "andychilton@gmail.com"
+  },
+  "author": {
+    "name": "Andrew Chilton",
+    "email": "andychilton@gmail.com",
+    "url": "http://chilts.org/"
+  },
+  "contributors": [],
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://github.com/awssum/awssum-amazon/raw/master/LICENSE"
+    }
+  ],
+  "keywords": [
+    "awssum",
+    "awssum-plugin",
+    "amazon",
+    "aws",
+    "webapi",
+    "api"
+  ]
 }
